[package]
name = "kasane-logic"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.17"
itertools = "0.14.0"
ts-rs = { version = "11.1.0", optional = true }
bincode = {version="2",features=["derive","serde"]}

[features]
default = ["serde", "ts-rs"]
serde = ["dep:serde"]
ts-rs = ["dep:ts-rs"]
